the whole version Code

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,9 +1,14 @@
-datasource.mysql.url=jdbc:mysql:///security_yvan?createDatabaseIfNotExist=true&autoReconnect=true&useSSL=false
-datasource.mysql.username=root
-datasource.mysql.password=
-datasource.mysql.driver-class-name=com.mysql.jdbc.Driver
+#datasource.mysql.url=jdbc:mysql:///security_yvan?createDatabaseIfNotExist=true&autoReconnect=true&useSSL=false
+#datasource.mysql.username=root
+#datasource.mysql.password=
+#datasource.mysql.driver-class-name=com.mysql.jdbc.Driver
 
-spring.jpa.database: mysql
-spring.jpa.show-sql: true
-spring.jpa.hibernate.ddl-auto: update
-spring.jpa.properties.hibernate.format_sql: true
+spring.datasource.url=jdbc:mysql:///security_yvan?createDatabaseIfNotExist=true&autoReconnect=true&useSSL=false
+spring.datasource.username=root
+spring.datasource.password=
+spring.datasource.driver-class-name=com.mysql.jdbc.Driver
+
+spring.jpa.hibernate.ddl-auto=update
+spring.jpa.database=mysql
+spring.jpa.show-sql=true
+spring.jpa.properties.hibernate.format_sql=true
